# EtchDNS

./: .gitignore  Cargo.toml  README.md  allowed_zones.txt  config.toml  etchdns.toml  nx_zones.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
fuzz/: Cargo.toml  README.md  build.rs  generate_corpus  generate_corpus.rs
fuzz/fuzz_targets/: create_dns_response.rs  dns_key_from_packet.rs  extract_client_ip.rs  extract_edns_version.rs  ip_range_from_cidr.rs  ip_validator_validate.rs  is_dnssec_requested.rs  qname.rs  query_type_class.rs  rate_limiter_is_allowed.rs  validate_dns_packet.rs
hooks-plugin/: Cargo.toml  README.md
hooks-plugin/src/: lib.rs
src/: allowed_zones.rs  cache.rs  control.rs  dns_key.rs  dns_key_test.rs  dns_parser.rs  dns_processor.rs  doh.rs  errors.rs  hooks.rs  ip_validator.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  nx_zones.rs  probe.rs  query_logger.rs  query_manager.rs  query_manager_new.rs  rate_limiter.rs  resolver.rs  stats.rs
webassembly-plugins/rust/: README.md
webassembly-plugins/rust/src/: lib.rs
webassembly-plugins/zig/: README.md  build.zig  build.zig.zon  etchdns-config-example.toml  test.sh
webassembly-plugins/zig/src/: main.zig
