[package]
name = "etchdns"
version = "0.1.0"
edition = "2024"

[lib]
name = "etchdns"
path = "src/lib.rs"

[[bin]]
name = "etchdns"
path = "src/main.rs"

[features]
default = ["hooks"]
hooks = ["extism"]

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
slabigator = "0.9"
rand = "0.9"
byteorder = "1.5"
futures = "0.3.31"
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
bytes = "1.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
sieve-cache = "1.1.0"
base64 = "0.22"
form_urlencoded = "1.2"
extism = { version = "1.10.0", optional = true }
privdrop = "0.5.5"
httpdate = "1.0.3"

[dev-dependencies]
tempfile = "3.20.0"
