[package]
name = "etchdns"
version = "0.1.1"
edition = "2024"
description = "A caching DNS proxy with advanced security features, WebAssembly hooks, and comprehensive protection mechanisms"
authors = ["Frank Denis"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jedisct1/etchdns"
homepage = "https://github.com/jedisct1/etchdns"
documentation = "https://github.com/jedisct1/etchdns"
keywords = ["dns", "caching", "proxy", "security", "webassembly"]
categories = ["network-programming", "caching", "web-programming"]
exclude = [
    "fuzz/corpus/*",
    "fuzz/artifacts/*",
    ".DS_Store",
    ".zig-cache",
    "www",
]

[lib]
name = "etchdns"
path = "src/lib.rs"

[[bin]]
name = "etchdns"
path = "src/main.rs"

[features]
default = []
hooks = ["extism"]

[dependencies]
bpf = "0.1.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
slabigator = "0.9"
time-format = "1.2.1"
rand = "0.9"
byteorder = "1.5"
futures = "0.3.31"
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
bytes = "1.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
sieve-cache = "1.1.5"
base64 = "0.22"
form_urlencoded = "1.2"
extism = { version = "1.11.1", optional = true }
privdrop = "0.5.6"
httpdate = "1.0.3"

[dev-dependencies]
tempfile = "3.20.0"
tokio-test = "0.4.4"
