[package]
name = "etchdns-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
build = "build.rs"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.etchdns]
path = ".."

# Fuzz target for dns_parser::validate_dns_packet
[[bin]]
name = "validate_dns_packet"
path = "fuzz_targets/validate_dns_packet.rs"
test = false
doc = false
bench = false

# Fuzz target for dns_parser::qname
[[bin]]
name = "qname"
path = "fuzz_targets/qname.rs"
test = false
doc = false
bench = false

# Fuzz target for dns_parser::query_type_class
[[bin]]
name = "query_type_class"
path = "fuzz_targets/query_type_class.rs"
test = false
doc = false
bench = false

# Fuzz target for dns_parser::is_dnssec_requested
[[bin]]
name = "is_dnssec_requested"
path = "fuzz_targets/is_dnssec_requested.rs"
test = false
doc = false
bench = false

# Fuzz target for DNSKey::from_packet
[[bin]]
name = "dns_key_from_packet"
path = "fuzz_targets/dns_key_from_packet.rs"
test = false
doc = false
bench = false

# Fuzz target for IpValidator::validate_ip_str
[[bin]]
name = "ip_validator_validate"
path = "fuzz_targets/ip_validator_validate.rs"
test = false
doc = false
bench = false

# Fuzz target for IpRange::from_cidr
[[bin]]
name = "ip_range_from_cidr"
path = "fuzz_targets/ip_range_from_cidr.rs"
test = false
doc = false
bench = false

# Fuzz target for create_dns_response
[[bin]]
name = "create_dns_response"
path = "fuzz_targets/create_dns_response.rs"
test = false
doc = false
bench = false

# Fuzz target for extract_client_ip
[[bin]]
name = "extract_client_ip"
path = "fuzz_targets/extract_client_ip.rs"
test = false
doc = false
bench = false

# Fuzz target for RateLimiter::is_allowed
[[bin]]
name = "rate_limiter_is_allowed"
path = "fuzz_targets/rate_limiter_is_allowed.rs"
test = false
doc = false
bench = false
